...
        android:layout_height="match_parent"
        android:background="@drawable/bottom_shadow"
        android:orientation="vertical">

        <!-- Grids list -->
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/listview_horizontal_margin"
            android:paddingRight="@dimen/listview_horizontal_margin"
            android:divider="#00000000" />

...
                android:text="@string/text77"
                android:textColor="#4E5258"
                android:textSize="40sp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_content_add"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_compat_margin"
            app:elevation="6dp"
...
