<?xml version="1.0" encoding="utf-8"?>
<com.chteuchteu.munin.ui.HackyDrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/material_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
