<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/menu_period"
		app:showAsAction="always"
		android:title="@string/text76">
		<menu>
			<item
				android:id="@+id/period_day"
				android:title="@string/text47.1"/>
			<item
				android:id="@+id/period_week"
				android:title="@string/text47.2"/>
			<item
				android:id="@+id/period_month"
				android:title="@string/text47.3"/>
			<item
				android:id="@+id/period_year"
				android:title="@string/text47.4"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_refresh"
		app:showAsAction="always"
		android:icon="@drawable/ic_action_navigation_refresh"
		android:title="@string/menu_graph_refresh"/>
    <item
        android:id="@+id/menu_labels"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_label"
        android:title="@string/button_labels"/>
	<item
		android:id="@+id/menu_documentation"
		app:showAsAction="always"
		android:visible="false"
		android:title="@string/documentation"
		android:icon="@drawable/ic_action_help2"/>
	<item
		android:id="@+id/menu_save"
		app:showAsAction="withText"
		android:title="@string/menu_graph_save"/>
	<item
		android:id="@+id/menu_openinbrowser"
		app:showAsAction="withText"
		android:title="@string/openInBrowser"
		android:visible="false"/>
	<item
		android:id="@+id/menu_fieldsDescription"
		app:showAsAction="withText"
		android:title="@string/fieldsDescription"
		android:visible="false"/>

</menu>