<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/Toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/listview_horizontal_margin"
        android:paddingRight="@dimen/listview_horizontal_margin"
        android:background="@drawable/bottom_shadow">

        <!-- Munin URL -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/muninMasterUrlLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_URL_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp" />

            <AutoCompleteTextView
                android:id="@+id/textbox_serverUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/settings_URL_label2"
                android:inputType="textUri"
                android:nextFocusLeft="@id/textbox_serverUrl"
                android:nextFocusUp="@id/textbox_serverUrl" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
